# nix-data

./: .gitignore  Cargo.toml  README.md  flake.nix
modules/: default.nix
shells/nix-data/: default.nix
src/: lib.rs  main.rs  utils.rs
src/cache/: channel.rs  flakes.rs  mod.rs  nixos.rs  nonnixos.rs  profile.rs
src/config/: configfile.rs  mod.rs
