[package]
name = "nix-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "brotli"] }
anyhow = "1.0"
lazy_static = "1.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1"

nix-editor = { git = "https://github.com/vlinkz/nix-editor", branch = "main" } 
