[package]
name = "nix-data"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A set of modules for easily managing Nix and NixOS packages and options"
repository = "https://github.com/snowflakelinux/nix-data/"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
keywords = ["nix", "nixos", "nix-editor", "snowflakeos"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "brotli"] }
anyhow = "1.0"
lazy_static = "1.4"
brotli = "3.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1"

nix-editor = "0.3.0-beta.1"
log = "0.4"
pretty_env_logger = "0.4"

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"